# narrative-llm-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  release_notes.md
.github/workflows/: codeql.yml  pypi-release.yml  python-versions-test.yml  release.yml  tag_and_release.yml
docs/: index.md
docs/development/: code-style.md  contributing.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: conversation-state.md  json-schema-tools.md  rest-api-client.md
docs/reward_functions/: index.md
docs/templates/: index.md
narrative_llm_tools/: __init__.py
narrative_llm_tools/cli/: cli.py
narrative_llm_tools/handlers/: __init__.py  huggingface.py
narrative_llm_tools/integrations/axolotl/: __init__.py  args.py
narrative_llm_tools/patches/: __init__.py
narrative_llm_tools/rest_api_client/: __init__.py  rest_api_client.py  types.py
narrative_llm_tools/reward_functions/cot_with_tool_call/: __init__.py  format.py
narrative_llm_tools/reward_models/: json_similarity_reward_model.py
narrative_llm_tools/state/: __init__.py  conversation.py  conversation_state.py  messages.py
narrative_llm_tools/templates/: narrative_chat_template.j2  narrative_chat_template_cot.j2
narrative_llm_tools/tools/: __init__.py  json_schema_tools.py
narrative_llm_tools/utils/: __init__.py  dataset_transformers.py  format_enforcer.py  types.py
reward_functions/: index.html
search/: search_index.json
tests/handlers/: test_huggingface.py
tests/integrations/transformers/: test_narrative_dataset_logger_callback.py
tests/narrative_api/: test_narrative_api_client.py
tests/rest_api_client/: test_rest_api_client.py  test_types.py
tests/reward_functions/: test_reward_functions_from_trainer.py
tests/reward_functions/cot_with_tool_call/: test_format.py  test_reward_adjustments.py  test_tool_calls_validity_reward.py
tests/reward_models/: test_json_similarity_reward_model.py
tests/state/: test_additional_conversation.py  test_conversation.py  test_conversation_state.py  test_messages.py
tests/tools/: test_json_schema_tools.py
tests/utils/: test_dataset_transformers.py  test_format_enforcer.py
